--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,18 @@
-# Python cache
 __pycache__/
-*.py[cod]
+*.pyc
 *.pyo
 *.pyd
-
-# Virtual environment
+.env
+.venv
+env/
 venv/
-.env/
-
-# IDE files
-.vscode/
-.idea/
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Logs and temporary files
-*.log
-*.tmp
-
-# Jupyter Notebook checkpoints (if any)
-.ipynb_checkpoints/
-
-# Compiled matplotlib images or local outputs
-*.png
-*.jpg
-
-# Local Ollama or Flask configs (if generated)
 instance/
-*.db
+.DS_Store
+*.sqlite3
+*.log
+.idea/
+.vscode/
+*.zip
+*.bak
+*.tmp
+node_modules/
